--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
+aiogram==2.18
 aiohttp==3.8.1
 aiosignal==1.2.0
 aiosocksy==0.1.2
 aiotg==1.0.0
 async-timeout==4.0.2
 attrs==21.4.0
+Babel==2.9.1
+certifi==2021.10.8
 charset-normalizer==2.0.10
 frozenlist==1.2.0
 idna==3.3
 multidict==5.2.0
+pytz==2021.3
 watchdog==2.1.6
 yarl==1.7.2
